k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-project-service
spec:
  selector:
    app: web-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
